--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.17.7"
+linecount = "0.1.0"
+chrono = "0.4.15"
